--- a/src/components/calculator/calculator.css
+++ b/src/components/calculator/calculator.css
@@ -1,3 +1,21 @@
 .calculator {
-  color: red;
+  background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+  border: slategray solid 3px;
+  border-radius: 10px;
+  padding: 15px;
+  width: 300px;
+}
+
+button {
+  color: rgb(0, 0, 0);
+  font-size: larger;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 5px;
+}
+
+input {
+  height: 85px;
+  width: 255px;
+  border-radius: 10px;
 }
