--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+/* @font-face {
+  font-family: "DS-DIGI";
+  src: url("./assets/DS-DIGI.TTF") format("truetype");
+} */
 *,
 *::after,
 *::before {
